# cmake-getting-started-c

./: .gitignore  CMakeLists.txt
cmake/: CompilerWarnings.cmake  StandardProjectSettings.cmake
src/: main.c  user_string.c  user_string.h
